# llm-cmd

./: CLAUDE.md  README.md  llm_cmd.py  pyproject.toml
.github/: copilot-instructions.md
llm_cmd/: __init__.py  __main__.py  cli.py  config.py  constants.py  context.py  db.py  docs.py  entry.py  execute.py  http_client.py  models.py  multimodal.py
tests/: test_llm_cmd.py
