[project]
name = "llm-cmd"
version = "0.1.0"
description = "No-TUI LLM CLI — ask questions and run AI-generated shell commands"
readme = "README.md"
requires-python = ">=3.14"
dependencies = ["argcomplete"]

[dependency-groups]
dev = ["pytest"]

[project.scripts]
llm-cmd        = "llm_cmd:main"
llm-cmd-model  = "llm_cmd:main_model"
llm-cmd-status = "llm_cmd:main_status"
llm-cmd-cost   = "llm_cmd:main_cost"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
